Use BundleOrPluginFileDetails instead of passing string or File objects while crating descriptor